[package]
name = "surge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.87.2", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
futures = "0.3.30"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features=["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.52"
anyhow = "1.0.77"
serde = { version = "1.0.193", features = ["derive"] }
tokio-util = "0.7.10"
url = "2.5.0"
reqwest = { version = "0.11.23", default-features=false, features = ["rustls-tls", "json"] }
