[package]
name = "surged"
description = "Kubernetes operator for exposing services via headless"
license = "Apache-2.0"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/Jc2k/surge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
futures = "0.3.30"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features=["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.57"
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
tokio-util = "0.7.10"
url = "2.5.0"
reqwest = { version = "0.11.24", default-features=false, features = ["rustls-tls", "json"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "upload"
